# transition_disfluency

./: README.md
complie/: CMakeLists.txt  command.txt
complie/runs/python/: test_word_sr_chris.sh  test_word_sr_plain.sh  test_word_sr_plain_alter.sh  test_word_sr_seq2seq.sh  train_word_sr_chris.sh  train_word_sr_plain.sh  train_word_sr_plain_alter.sh  train_word_sr_seq2seq.sh
complie/src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  corpus.cc  corpus.h  features_stack  labeling_deletion_model.cc  labeling_deletion_model.h  layer.cc  layer.cc.origin  layer.h  layer.h.origin  readme  to do  utils.cc  utils.h
complie/src/disfluency/: CMakeLists.txt  c2.h  lstm-parse-old-version-myself.cc  lstm-parse.cc  lstm-parse.cc.03.27  lstm-parse.cc.1.0  lstm-parse.cc.2.0  lstm-parse.cc.3.0  lstm-parse.cc.4.0  lstm-parse.cc.5.0
data/: conll2parser.py  convert-conll2trans.py  get_feature_all.py  run.sh  test  trans.py
run/: run_greedy.sh  run_local.sh
